Use a local profile image and favicon

--- a/templates/head.mustache
+++ b/templates/head.mustache
@@ -7,6 +7,7 @@
 <meta name="description" content="{{description}}">
 <style>{{{styles}}}</style>
 <link rel="canonical" href="https://au.si/{{key}}">
+<link rel="icon" href="/images/profile-64.jpg" type="image/jpeg">
 {{head}}
 </head>
 <body>
