--- a/templates/profile.mustache
+++ b/templates/profile.mustache
@@ -1,8 +1,8 @@
 <footer class="profile h-card">
 	<a href="/" class="profile-image">
 		<img class="u-photo" alt="Martin Auswöger"
-			srcset="https://www.gravatar.com/avatar/ef0606c138d944e1a8089ff8eb1df71d?s=128 2x"
-			src="https://www.gravatar.com/avatar/ef0606c138d944e1a8089ff8eb1df71d?s=64"
+			srcset="/images/profile-128.jpg 2x"
+			src="/images/profile-64.jpg"
 		>
 	</a>
 	<h3><a class="u-email p-name" href="mailto:martin@auswoeger.com" rel="me">Martin Auswöger</a></h3>
