Post CSS Container / Element Queries Update

--- a/styles.sass
+++ b/styles.sass
@@ -23,7 +23,7 @@ summary
 	display: block
 
 a
-	background-color: transparent;
+	background-color: transparent
 
 	&:active,
 	&:hover
@@ -56,6 +56,7 @@ $border-color: #CCCCCC
 
 html
 	box-sizing: border-box
+	tab-size: 4
 	font: 87.5%/1.5 sans-serif
 	letter-spacing: 0.02em
 	color: $text-color
@@ -136,6 +137,7 @@ pre
 				color: $link-color
 				text-decoration: none
 	&-date
+		min-width: 4em
 		margin-left: 1em
 		text-align: right
 		> a
