Use system-ui font

--- a/styles.sass
+++ b/styles.sass
@@ -57,8 +57,7 @@ $border-color: #CCCCCC
 html
 	box-sizing: border-box
 	tab-size: 4
-	font: 87.5%/1.5 sans-serif
-	letter-spacing: 0.02em
+	font: 87.5%/1.5 system-ui, -apple-system, BlinkMacSystemFont, sans-serif
 	color: $text-color
 	@media (min-width: 600px)
 		font-size: 100%
@@ -72,7 +71,7 @@ html
 
 h1, h2, h3, h4, h5, h6
 	margin: 1.5em 0 0.5em
-	font-family: Georgia, serif
+	font-weight: inherit
 
 h1, h2
 	line-height: 1.2
@@ -81,13 +80,13 @@ h1
 	font-size: 1.75em
 
 h2
-	font-size: 1.25em
+	font-size: 1.5em
 
 h3
-	font-size: 1.1em
+	font-size: 1.25em
 
 h4
-	font-size: 1em
+	font-size: 11em
 
 p
 	margin: 1em 0
