Style the read more link

--- a/styles.sass
+++ b/styles.sass
@@ -153,6 +153,8 @@ pre
 			&:hover, &:focus
 				color: $link-color
 				text-decoration: none
+	> a:after
+		content: " ›"
 
 .profile
 	margin: 4em 0 2em
