--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -11,7 +11,7 @@
 					{{{intro}}}
 				</div>
 				{{#content}}
-					<a class="u-url" href="/{{key}}">Read more...</a>
+					<a class="u-url" href="/{{key}}">Read more</a>
 				{{/content}}
 			</article>
 		{{/posts}}
